--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.mvc.view.prefix=/templates/
+spring.mvc.view.suffix=.html
+#logging.level.org.apache.coyote.http11=debug
 
+spring.datasource.url=jdbc:mysql://localhost:3306/mydb?serverTimezone=UTC&useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.username=root
+spring.datasource.password=1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.messages.basename=messages,errors
+
+#server.servlet.session.tracking-modes=cookie
+#server.servlet.session.timeout=60
+
+server.servlet.context-path=/
