여행상품관련 CRUD

--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -2,3 +2,5 @@
 NotBlank={0} No space allowed
 Range={0}, {2} ~ {1} ??
 Max={0}, ?? {1}
+NotNull={0} No space allowed
+typeMismatch.java.lang.Integer= Please enter a number
