--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,7 @@ spring.messages.basename=messages,errors
 
 server.servlet.context-path=/
 server.port = 8081
+
+spring.security.oauth2.client.registration.google.client-id=1063901095376-mlb9o0bghod5rkj5e8lkk12ru8o7mdgs.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
+spring.profiles.include=oauth2
