--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,5 @@ server.port = 8081
 spring.security.oauth2.client.registration.google.client-id=1063901095376-mlb9o0bghod5rkj5e8lkk12ru8o7mdgs.apps.googleusercontent.com
 spring.security.oauth2.client.registration.google.client-secret=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
 spring.profiles.include=oauth2
+spring.mvc.static-path-pattern=/**
+spring.mvc.static-locations=classpath:/META-INF/resources/, classpath:/resources/, classpath:/static/, classpath:/public/
