--- a/src/main/resources/errors.properties
+++ b/src/main/resources/errors.properties
@@ -1,5 +1,7 @@
+spring.messages.basename=messages
+spring.messages.cache-duration=-1
+spring.messages.encoding=UTF-8
 
-NotBlank={0} No space allowed
 Range={0}, {2} ~ {1} ??
 Max={0}, ?? {1}
 NotNull={0} No space allowed
